            - New static function empty().
        Class ListView<...>:
            - Added equality operators (== and !=).
            - Added a specialisation for fixed-size C-style arrays:
              ListView<Element[n]>.
        Class ModelLinkGraph:
            - Routine generateMinimalLinks() now throws an exception if its
              precondition is not met.
        Class NormalEncoding:
            - New static function empty().
        Class NormalHypersurface:
            - New constructor to build the empty surface.
        Class NormalSurface:
            - New constructor to build the empty surface.
        Class TableView:
            - New class to help wrap read-only multi-dimensional arrays.
    PYTHON:
        - Updated the included pybind11 library from 2.8.1 to 2.10.0.
          This means we can now support Python 3.11, but no longer support
          Python 3.4 or 3.5.
        - Everything in Regina now has docstrings!  These are extracted
          automatically from the (human-written) C++ documentation, so you
          will still find C++ terminology.  Neverhtless, these are now
          available in Python for all of Regina's classes and functions.
        - Several classes that provide array-like access (__getitem__) now
          implement the special __len__() function also.  Note that this
          affects how objects are evaluated in a boolean context.  Affected
          classes: AngleStructures, Cyclotomic, FacetPairing<dim>,
          Isomorphism<dim>, ListView, Matrix2, NormalHypersurfaces,
          NormalSurfaces, Vector<T>.
    USER INTERFACE:
        - Fixed a deadlock that occurs in the Windows GUI when opening two
          Python consoles in quick succession (e.g., by a double-click).

Version 7.1  [ 30 September, 2022 ]

    GENERAL:
        - Regina now supports Python 3 only (not Python 2 or 3).
        - The GUI can now build against either Qt5 or Qt6.